# carbsense

./: .coveragerc  .gitignore  Makefile  README.md  benchmark_simglucose.csv  pyproject.toml
.github/workflows/: ci.yml
docs/: 01-problem.md  02-uva-padova.md  05-roadmap.md  06-literature-review.md  07-research-gap.md  benchmark_simglucose.md  references.bib
scripts/: run_simglucose_benchmark.py
src/carbsense/data/: simglucose_bridge.py
src/carbsense/inverse/: map_estimator.py
src/carbsense/physiology/: uvapadova_min.py
tests/: test_against_simglucose.py  test_forward_simulator.py  test_map_estimator.py
