[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carbsense"
version = "0.0.1"
description = "Physics-informed carbohydrate estimation from CGM signals"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "CarbSense contributors" }]

dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "diffrax>=0.6.0",
    "equinox>=0.11.0",
    "optax>=0.2.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "jupyterlab>=4.2",
]
sim = [
    "simglucose>=0.2.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/carbsense"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "NPY", "PD"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=carbsense --cov-report=term-missing"
